# git-fmt

./: .omnifmt.yaml  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  git-fmt.cabal  stack-nightly.yaml  stack.yaml
.travis/: stack-nightly.yaml
app/: Main.hs
app/Git/Fmt/: Options.hs  Pipes.hs
docs/example-configs/: aeson-pretty.yaml  js-beautify.yaml  json_pp.yaml  ruby-beautify.yaml
examples/: js-beautify.yaml  ruby-beautify.yaml  stylish-haskell.yaml
src/Git/: Fmt.hs
src/Git/Fmt/: Command.hs  Config.hs  Directory.hs  Exit.hs  Language.hs  Options.hs  Pipes.hs  Process.hs  Version.hs
src/Git/Fmt/Language/Json/: Parser.hs  Pretty.hs
src/Git/Fmt/Options/Applicative/: Parser.hs
src/Omnifmt/: Config.hs  Exit.hs  Pipes.hs  Process.hs
src/System/Directory/: Extra'.hs
src/System/IO/: Extra'.hs
test/app/: Main.hs
test/json/app/: Main.hs
test/json/tests/0011-array-of-bools/: expected-output.json
test/json/tests/0011-array-of-ints/: expected-output.json
test/json/tests/0011-array-of-objs/: expected-output.json  input.json
test/json/tests/0011-array-of-rats/: expected-output.json
test/json/tests/0011-empty/: expected-output.json
test/json/tests/0011-long-array/: expected-output.json  input.json
test/json/tests/0011-long-str/: expected-output.json  input.json
test/json/tests/0011-top-level-bool/: expected-output.json
test/json/tests/0011-top-level-int/: expected-output.json
test/json/tests/0011-top-level-null/: expected-output.json
test/json/tests/0011-top-level-obj/: expected-output.json  input.json
test/json/tests/0011-top-level-rat/: expected-output.json
test/json/tests/0011-top-level-str/: expected-output.json
test/json/tests/0026-str-with-enter/: expected-output.json  input.json
test/json/tests/0026-str-with-tab/: expected-output.json  input.json
test/shared/src/Git/Fmt/: Test.hs
