name:           git-fmt
version:        0.0.0.0

author:         Henry J. Wylde
maintainer:     public@hjwylde.com
homepage:       https://github.com/hjwylde/git-fmt

synopsis:       Custom git command for formatting code.
description:    git-fmt adds a custom command to Git that automatically formats code.
                The idea was taken from gofmt, just with a bit of expansion to more languages.

license:        BSD3
license-file:   LICENSE

cabal-version:  >= 1.10
category:       Development
build-type:     Simple

source-repository head
    type:       git
    location:   git@github.com:hjwylde/git-fmt

executable git-fmt
    main-is:        Main.hs
    hs-source-dirs: app/
    ghc-options:    -Wall -Werror -fno-warn-name-shadowing

    default-language: Haskell2010
    build-depends:
        base == 4.8.*,
        git-fmt,
        optparse-applicative == 0.11.*

library
    hs-source-dirs: src/
    ghc-options:    -Wall -Werror -fno-warn-name-shadowing
    exposed-modules:
        Git.Fmt.Command,
        Git.Fmt.Options.Applicative.Parser
    other-modules:
        Git.Fmt.Version,
        Paths_git_fmt

    default-language: Haskell2010
    build-depends:
        base == 4.8.*,
        gitlib == 3.1.*,
        gitlib-libgit2 == 3.1.*,
        optparse-applicative == 0.11.*

test-suite git-fmt-test
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    hs-source-dirs: test/app/, test/src/
    ghc-options:    -threaded -Wall -Werror -fno-warn-name-shadowing

    default-language: Haskell2010
    build-depends:
        base == 4.8.*,
        git-fmt,
        tasty >= 0.10 && < 0.12

